Fix rounded corners overflow issue

--- a/sass/blocks/_stock-select.sass
+++ b/sass/blocks/_stock-select.sass
@@ -111,6 +111,8 @@ $block: ".stock-select"
 
   // $Select options inner container
   &__options-inner
+    position: relative
+    z-index: 10
     display: block
     width: 100%
     max-height: 200px
@@ -131,10 +133,6 @@ $block: ".stock-select"
     display: inline-block
     width: 100%
     padding: 15px 0 10px
-
-    // $Select options content CONTEXT: $Select MOD: role site
-    #{$block}_role_site &
-      border-radius: 10px
 
 
   // $Select option
